pyem (0.5.6) Thu, 16 Nov 2006 14:18:19 +0900

	* bump to 0.5.6
	* Add __str__ and __repr__ for GM and GMM classes
	* Add regularization method (but not used yet).
	* Change 'f<8' to N.float64 for ctype enabled densities
	* Move 'Magic numbers' into a separated python file, misc.py

pyem (0.5.5) Tue, 24 Oct 2006 18:30:54 +0900

	* Fix a bug inmultiple_gaussian_den which prevents 
	full covariance mode to work in GMM.
	* Add consistency tests in tests/test_gmm_em.py to avoid the 
	above bug from being detected from now on.

pyem (0.5.5) Mon, 23 Oct 2006 18:48:15 +0900

	* Bump to 0.5.5
	* Added bic method to GMM.
	* A few fixes for docstrings
	* Added bibliography to the doc

pyem (0.5.4) Fri, 20 Oct 2006 12:52:01 +0900

	* Bump to 0.5.4
	* Online EM is basically implemented, with tests. The API
	should be fixed to be choherent (lacks the Trainer Class, too).
	The class is not imported by default, still (available as _OnGMM)

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.5.3) Thu, 12 Oct 2006 21:08:21 +0900

	* Change the layout and setup.py for inclusion to scipy.
	* Initial script for online em.

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.5.3) Tue, 03 Oct 2006 18:28:13 +0900

	* Update tests so that they work within the numpy test framework
	* Update version to 0.5.3

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.5.2) Tue, 29 Aug 2006 14:53:49 +0900

	* Add a class method to GM to create a model directly from
	w, mean and var values (uses decorator: python 2.4)
	* Add a plot1d method to GM to plot a GM in one dimension (where
	the confidence ell kind of plot does not make sense). This draws
	each Gaussian pdf, fill the area on the confidence interval
	(matplotlib is really cool)

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 

pyem (0.5.2) Mon, 28 Aug 2006 13:20:13 +0900

	* Add a plot method to Gm class, so that it is easier
	to plot a GM model interactively (needs matplotlib)
